# commom_problems

./: pyproject.toml
cep/: __main__.py  api.py  core.py  index.html  main.js  models.py  serializers.py
cpf_calc/: cli.py  core.py  index.html  main.js
