[tool.poetry]
name = "commom_problems"
version = "0.1.0"
description = "A project with many daily/commom issues or challenges."
authors = ["Henrique Marchi <henriquems125@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
black = "^22.6.0"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
